This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: _datetimemodule.c:3328:16: error: initializer element is not constant
Type: compile error Stage: resolved
Components: Build Versions: Python 3.9
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: miss-islington, p-ganssle, petr.viktorin, smani
Priority: normal Keywords: patch

Created on 2020-05-26 09:55 by smani, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 20493 merged petr.viktorin, 2020-05-28 15:47
PR 20495 merged miss-islington, 2020-05-28 16:15
Messages (3)
msg369965 - (view) Author: Sandro Mani (smani) * Date: 2020-05-26 09:55
Hitting this when attempting to cross-compile python-3.9 to mingw:

/builddir/build/BUILD/Python-3.9.0b1/Modules/_datetimemodule.c:3328:16: error: initializer element is not constant
 3328 |     .tp_base = &PyTuple_Type,

Indeed PyTuple_Type does not have static storage, so I suppose this [1] applies.

[1] https://stackoverflow.com/a/3025106/1338788
msg370235 - (view) Author: miss-islington (miss-islington) Date: 2020-05-28 16:14
New changeset 459acc551656785bc4a3363d65c7a60f822da8e3 by Petr Viktorin in branch 'master':
bpo-40777: Initialize PyDateTime_IsoCalendarDateType.tp_base at run-time (GH-20493)
https://github.com/python/cpython/commit/459acc551656785bc4a3363d65c7a60f822da8e3
msg370243 - (view) Author: miss-islington (miss-islington) Date: 2020-05-28 16:41
New changeset eceee544de4b0f885729022c135c53291b6bbb23 by Miss Islington (bot) in branch '3.9':
[3.9] bpo-40777: Initialize PyDateTime_IsoCalendarDateType.tp_base at run-time (GH-20493) (GH-20495)
https://github.com/python/cpython/commit/eceee544de4b0f885729022c135c53291b6bbb23
History
Date User Action Args
2022-04-11 14:59:31adminsetgithub: 84954
2021-10-20 14:36:49petr.viktorinsetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2020-05-28 16:41:45miss-islingtonsetmessages: + msg370243
2020-05-28 16:15:02miss-islingtonsetpull_requests: + pull_request19744
2020-05-28 16:14:52miss-islingtonsetnosy: + miss-islington
messages: + msg370235
2020-05-28 15:55:15p-gansslesetnosy: + p-ganssle
2020-05-28 15:47:18petr.viktorinsetkeywords: + patch
nosy: + petr.viktorin

pull_requests: + pull_request19742
stage: patch review
2020-05-26 09:55:41smanicreate